# mc_opengl

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
resources/shader/: chunk.vs  default.frag  default.vert
src/: CMakeLists.txt  chunk.cpp  chunk.hpp  grip.cpp  grip.hpp  ioutil.cpp  ioutil.hpp  main.cpp  shader.cpp  shader.hpp  ui.cpp  ui.hpp  vao.cpp  vao.hpp  window.cpp  window.hpp
src/engine/: CMakeLists.txt  Render.cpp  Render.hpp  Shader.cpp  Shader.hpp
src/game/: CMakeLists.txt  Chunk.cpp  Chunk.hpp  Game.cpp  Game.hpp  Input.cpp  Input.hpp  Window.cpp  Window.hpp  main.cpp
src/util/: CMakeLists.txt  IOUtil.cpp  IOUtil.hpp  Test_IOUtil.cpp
test/: CMakeLists.txt  test_noise.cpp
